--- a/index.html
+++ b/index.html
@@ -7,21 +7,15 @@
     <title>Eval_23</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/Eval_23.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@800&family=Oooh+Baby&display=swap" rel="stylesheet">
-</head>
+   </head>
 <body>
     <div>
-        <p class="container" >
-
-        </p>
+        <p class="container" ></p>
+        <p class="return"></p>
 
 
     </div>
     <form>
-        <!-- <a href="#lien"> Le lien</a> -->
-        
         <input id="btn" type="button" value="Citation suivante">
     </form>
 
